@@ -180,6 +180,12 @@ public class MovieRenamer {
       return;
     }
 
+    // already scraped? do not rename if not...
+    if (!movie.isScraped()) {
+      LOGGER.error("won't rename movie '" + movie.getPath() + "' / '" + movie.getTitle() + "' since it appears to not have been scraped yet!");
+      return;
+    }
+
     // all the good & needed mediafiles
     ArrayList<MediaFile> needed = new ArrayList<MediaFile>();
     ArrayList<MediaFile> cleanup = new ArrayList<MediaFile>();
@@ -321,7 +327,7 @@ public class MovieRenamer {
       MediaFile ftr = generateFilename(movie, movie.getMediaFiles(MediaFileType.VIDEO).get(0), newVideoBasename).get(0); // there can be only one
       newVideoBasename = Utils.cleanStackingMarkers(ftr.getBasename());
     }
-    LOGGER.trace("Our new basename for renaming: " + newVideoBasename);
+    LOGGER.debug("Our new basename for renaming: " + newVideoBasename);
 
     // ######################################################################
     // ## test VIDEO rename
